Pagina Home concluída

--- a/home.html
+++ b/home.html
@@ -10,104 +10,123 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <div class="topo">
-        <img src="./assets/img/logo-icone.png" alt="">
-        <h1>AlfaTech</h1>
-        <p>Soluções em hospedagem</p>
-        <div>
-            <a href="#informacoes">INFORMAÇÕES</a>
-            <a href="#planos">PLANOS</a>
-            <a href="./tabeladeprecos.html">PREÇOS</a>
-            <a href="#contato">CONTATO</a>
+    <div>
+        <div class="container-topo limitar-secao">
+            <div class="topo-logo">
+                <img src="./assets/img/logo-icone.png" alt="">
+                <div>
+                    <h1>AlfaTech</h1>
+                    <p>Soluções em hospedagem</p>
+                </div>
+            </div>
+            <div class="topo-links">
+                <a href="#informacoes">INFORMAÇÕES</a>
+                <a href="#planos">PLANOS</a>
+                <a href="./tabeladeprecos.html">PREÇOS</a>
+                <a href="#contato">CONTATO</a>
+            </div>
         </div>
     </div>
 
-    <div class="banner">
-        <div>
-            <p>Simples - Fácil de usar - 10x mais rápido</p>
-            <h2>O melhor serviço de hospedagem na web para o seu site.</h2>
-            <p>Obtenha a melhor velocidade para o seu site. Não perca mais clientes por causa de lentidão na sua hospedagem.</p>
-        </div>
-        <img src="./assets/img/imagem-banner.png" alt="">
+    <div class="secao-banner">
+       <div class="container-banner limitar-secao">
+            <div>
+                <p>Simples - Fácil de usar - 10x mais rápido</p>
+                <h2>O melhor serviço de hospedagem na web para o seu site.</h2>
+                <p>Obtenha a melhor velocidade para o seu site. Não perca mais clientes por causa de lentidão na sua hospedagem.</p>
+            </div>
+            <img src="./assets/img/imagem-banner.png" alt="">
+       </div> 
     </div>
 
-    <div class="faixa1">
-        <h2>Hospede o seu site por apenas R$29 por mês.</h2>
-        <p>Também temos planos gratuitos. Adquira já o seu.</p>
-        <div>
-            <a href="./tabeladeprecos.html">TABELA DE PREÇOS</a>
+    <div class="secao-primeiro-anuncio">
+        <div class="container-primeiro-anuncio limitar-secao">
+            <div>
+                <h2>Hospede o seu site por apenas R$29 por mês.</h2>
+                <p>Também temos planos gratuitos. Adquira já o seu.</p>
+            </div>
+            <a 
+                href="./tabeladeprecos.html">
+                <img src="./assets/img/icone-foguete.png" alt="">
+                <span>TABELA DE PREÇOS</span>
+            </a>
         </div>
     </div>
 
-    <div class="info">
+    <div class="secao-info" id="informacoes">
         <h2>Existem diversos serviços de hospedagem de sites. Porque você deve <span>nos escolher?</span></h2>
-        <div>
-            <img src="./assets/img/icone-engrenagens.png" alt="">
-            <h3>Fácil de configurar</h3>
-            <p>Facilmente configurável em plataformas CMS populares - Wordpress, Joomia ...</p>
-        </div>
-        <div>
-            <img src="./assets/img/cloud-icone.png" alt="">
-            <h3>Servidores 100% Online</h3>
-            <p>Serviços que operam 100% do tempo para manter o seu site online...</p>
-        </div>
-        <div>
-            <img src="./assets/img/icone-suporte.png" alt="">
-            <h3>Suporte 24/7</h3>
-            <p>Suporte altamente treinado e especializado em soluções de Cloud...</p>
+        <div class="container-info limitar-secao">
+            <div>
+                <img src="./assets/img/icone-engrenagens.png" alt="">
+                <h3>Fácil de configurar</h3>
+                <p>Facilmente configurável em plataformas CMS populares - Wordpress, Joomia ...</p>
+            </div>
+            <div class="card2">
+                <img src="./assets/img/cloud-icone.png" alt="">
+                <h3>Servidores 100% Online</h3>
+                <p>Serviços que operam 100% do tempo para manter o seu site online...</p>
+            </div>
+            <div class="card3">
+                <img src="./assets/img/icone-suporte.png" alt="">
+                <h3>Suporte 24/7</h3>
+                <p>Suporte altamente treinado e especializado em soluções de Cloud...</p>
+            </div>
         </div>
     </div>
 
-    <div class="tabelapreco">
-        <h2>Pague somente pelo que for usar. Sem cobranças adicionais!</h2>
+    <div class="secao-planos" id="planos">
+        <h2>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h2>
         <table>
             <thead>
-               <tr>
-                    <th>PESSOAL</th>
-                    <th>PROFISSIONAL</th>
-                    <th>EMPRESARIAL</th>
-                    <th>BIG TECHS</th>
-               </tr> 
-            </thead>
+                <tr>
+                  <th>
+                    <h3>PESSOAL</h3>
+                    <img src="./assets/img/pessoal-icone.png" alt="ícone">
+                    <p>Indicado para uso pessoal</p>
+                  </th>
+                  <th>
+                    <h3>PROFISSIONAL</h3>
+                    <img src="./assets/img/equipe-icone.png" alt="ícone">
+                    <p>Indicado para profissionais de T.I</p>
+                  </th>
+                  <th>
+                    <h3>EMPRESARIAL</h3>
+                    <img src="./assets/img/empresa-icone.png" alt="ícone">
+                    <p>Indicado para empresas</p>
+                  </th>
+                  <th>
+                    <h3>BIG TECHS</h3>
+                    <img src="./assets/img/big-tech.png" alt="ícone">
+                    <p>Indicado para grandes empresas</p>
+                  </th>
+                </tr>
+              </thead>
             <tbody>
-                <tr>
-                    <td><img src="./assets/img/pessoal-icone.png" alt=""></td>
-                    <td><img src="./assets/img/equipe-icone.png" alt=""></td>
-                    <td><img src="./assets/img/empresa-icone.png" alt=""></td>
-                    <td><img src="./assets/img/big-tech.png" alt=""></td>
-                </tr>
-                <tr>
-                    <th>Indicado para uso pessoal</th>
-                    <th>Indicado para profissionais de T.I</th>
-                    <th>Indicado para empresas</th>
-                    <th>Indicado para grandes empresas</th>
-                </tr>
-                <tr>
+                <tr class="linha-impar">
                     <td>1 usuário</td>
                     <td>10 usuário</td>
                     <td>25 usuário</td>
                     <td>50 usuário</td>
                 </tr>
-                <tr>
+                <tr class="linha-par">
                     <td>1 domínio grátis</td>
                     <td>2 domínio grátis</td>
                     <td>2 domínio grátis</td>
                     <td>3 domínio grátis</td>
                 </tr>
-                <tr>
+                <tr class="linha-impar">
                     <td>200GB SSD espaço</td>
                     <td>500GB SSD espaço</td>
                     <td>1TB SSD espaço</td>
                     <td>2TB SSD espaço</td>
                 </tr>
-                <tr>
+                <tr class="linha-par">
                     <td>Ofertas especiais</td>
                     <td>Ofertas especiais</td>
                     <td>Ofertas especiais</td>
                     <td>Ofertas especiais</td>
                 </tr>
-                <tr>
+                <tr class="linha-impar">
                     <td>Suporte limitado</td>
                     <td>Suporte ilimitado</td>
                     <td>Suporte ilimitado</td>
@@ -117,22 +136,34 @@
         </table>
     </div>
 
-    <div class="faixa2">
-        <h2>Mais de 20.000 pessoas confiam na Spark! Seja um deles você também!</h2>
-        <div>
-            <a href="./tabeladeprecos.html">Tabela de preços</a>
+    <div class="secao-segundo-anuncio">
+        <div class="container-segundo-anuncio limitar-secao">
+            <h2>Mais de 20.000 pessoas confiam na Spark! Seja um deles você também!</h2>
+        <a 
+            href="./tabeladeprecos.html">
+            <img src="./assets/img/icone-foguete.png" alt="">
+            <span>TABELA DE PREÇOS</span>
+        </a>
         </div>
     </div>
 
-    <div class="rodape">
-        <img src="./assets/img/logo-icone.png" alt="">
-        <h3>AlfaTech</h3>
-        <p>Soluções em hospedagem</p>
-        <p>Telefone & Whatsapp: (21) 99999-5555</p>
-        <p>E-mail: suporte@alfatech.com</p>
-        <p>Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</p>
-        <p>© AlfaTech - Soluções em hospedagem - Todos os direitos reservados</p>
-        <p>Desenvolvido por "nome do aluno"</p>
+    <div>
+        <div class="rodape-logo">
+            <img src="./assets/img/logo-icone.png" alt="">
+        <div>
+            <h1>AlfaTech</h1>
+            <p>Soluções em hospedagem</p>
+        </div>
+        </div>
+        <div class="container-contatos" id="contato">
+            <p>Telefone & Whatsapp: (21) 99999-5555</p>
+            <p>E-mail: suporte@alfatech.com</p>
+            <p>Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</p>
+            <p>© AlfaTech - Soluções em hospedagem - Todos os direitos reservados</p>
+        </div>
+        <div class="container-copy">
+            <p>Desenvolvido por <span>Thiago Mendonça</span></p>
+         </div>
     </div>
 </body>
 </html>
